--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@ jdbc.url=jdbc:mysql://localhost:3306/test01?useSSL=false&allowPublicKeyRetrieval
 driverClass=com.mysql.cj.jdbc.Driver
 database.user.name=root
 database.user.password=thBrp+pn-1)k
+spring.profiles.active=hibernate
+
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
+hibernate.show_sql=true
+hibernate.format_sql=true
+hibernate.hbm2ddl.auto=validate
+hibernate.packagesToScan=com.javaguru.shoppinglist
